--- a/WiredBrainCoffee.CustomersApp/WiredBrainCoffee.CustomersApp.csproj
+++ b/WiredBrainCoffee.CustomersApp/WiredBrainCoffee.CustomersApp.csproj
@@ -128,6 +128,7 @@
     </Compile>
     <Compile Include="Model\Customer.cs" />
     <Compile Include="Base\Observable.cs" />
+    <Compile Include="Model\CustomerConverter.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -203,6 +204,18 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Resources\Brushes.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Resources\FluentXamlThemeEditorExport.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Resources\Strings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
